force-app/main/default/objects/Tax_Ops_Tasks_Csv_Data__c/Tax_Ops_Tasks_Csv_Data__c.object-meta.xml
<CustomObject>
    <description>This Object is created for Field Mapping with CSV Data</description>
    <label>Tax Ops Tasks Csv Data</label>
    <nameField>
        <displayFormat>TaxOps-{00000}</displayFormat>
        <label>TaxOpsTasksCsvData Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Ops Tasks Csv Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>