force-app/main/default/objects/Tax_Ops_Tasks_Csv_Data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>