force-app/main/default/objects/Tax_Ops_Tasks_Csv_Data__c/fields/Amount_Held__c.field-meta.xml
<CustomField>
    <fullName>Amount_Held__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Amount Held</label>
    <length>50</length>
    <type>Text</type>
</CustomField>