force-app/main/default/objects/Tax_Ops_Tasks_Csv_Data__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>