force-app/main/default/objects/Tax_Ops_Tasks_Csv_Data__c/fields/FEIN__c.field-meta.xml
<CustomField>
    <fullName>FEIN__c</fullName>
    <label>FEIN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>