force-app/main/default/objects/Tax_Ops_Tasks_Csv_Data__c/fields/Filing_Successful__c.field-meta.xml
<CustomField>
    <fullName>Filing_Successful__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filing Successful</label>
    <length>10</length>
    <type>Text</type>
</CustomField>