force-app/main/default/objects/Tax_Ops_Tasks_Csv_Data__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <description>The current processing state for this record. Only values in Queued are processed.</description>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_Processing_States</valueSetName>
    </valueSet>
</CustomField>