force-app/main/default/objects/Tax_Ops_Tasks_Csv_Data__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>