force-app/main/default/objects/Tax_Ops_Tasks_Csv_Data__c/fields/Uploaded_to_Koala__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_to_Koala__c</fullName>
    <label>Uploaded to Koala</label>
    <length>10</length>
    <type>Text</type>
</CustomField>